@@ -1,5 +1,11 @@
 2008-10-15  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
+	* tag V00-26-01
+	* set default esConnect string in OnlineConverter to localhost, as
+	requested by David Dykstra
+
+2008-10-15  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
 	* tag V00-26-00
 	* udpate schema and code for new int64 parameters
 
